# b2_sim

./: .gitignore  LICENSE  example.py  pyproject.toml  readme.md  setup.bash  sm.py  test.py  test2.py  vary_one_large.py  vary_one_large_grid.py  vary_two_large.py  vary_two_large_grid.py
example/: btokstarmumu_generator_recon_steer.py  generator_sim_steer.py  setup.bash  steer_recon.py
examples/btokstll/: run.py
helpers/: __init__.py  setup.py  submit.py  util.py
scripts/: sm.py  vary_one_large.py  vary_one_large_grid.py  vary_two_large.py  vary_two_large_grid.py
scripts/helpers/: setup.py  submit.py  util.py
src/b2_run_sim/: config.py  submit.py  util.py
src/btokstll_sim/: __init__.py  config.py  setup.py  submit.py  util.py
steering/: steer_recon.py  steer_sim.py
steering_files/: btokstmumu_generator_level_recon.py  detector_level_sim.py  generator_level_sim.py
template_decay_files/: btokstarmumu.dec
tests/full_run/: test.py
