[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "b2_run_sim"
version = "0.0.3"
authors = [
  { name="Ethan Lee", email="elee20@hawaii.edu" },
]
description = "Simulation helper for basf2."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ethanlee20/b2_run_sim"
Issues = "https://github.com/ethanlee20/b2_run_sim/issues"